k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toskar-ratings
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
